[TASK] Update Readme.md, adjust requirements

--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,12 @@
   "require": {
     "php": "^8.1",
     "digital-marketing-framework/template-engine-twig": "^1.0",
-    "digital-marketing-framework/typo3-core": "dev-main",
+    "digital-marketing-framework/typo3-core": "^1.0",
     "typo3/cms-core": "^11.5 || ^12.4"
   },
   "require-dev": {
     "mediatis/typo3-coding-standards": "^1.0"
   },
-  "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
       "DigitalMarketingFramework\\Typo3\\TemplateEngineTwig\\": "Classes"
