--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,13 @@
     "homepage": "https://www.mediatis.de",
     "require": {
         "php": "^8.1",
-        "digital-marketing-framework/template-engine-twig": "^2.1 || dev-feature/MFR-83-rest",
-        "digital-marketing-framework/typo3-core": "^2.1 || dev-feature/MFR-83-rest",
+        "digital-marketing-framework/template-engine-twig": "^2.1",
+        "digital-marketing-framework/typo3-core": "^2.1",
         "typo3/cms-core": "^11.5 || ^12.4"
     },
     "require-dev": {
         "mediatis/typo3-coding-standards": "^2.0"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "DigitalMarketingFramework\\Typo3\\TemplateEngineTwig\\": "Classes"
