--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "digital-marketing-framework/typo3-template-engine-twig",
-    "description": "Integrate Twig Template Engine into Digital Marketing Framework",
+    "description": "Anyrel - Twig Template Engine",
     "license": "GPL-2.0+",
     "type": "typo3-cms-extension",
     "keywords": [
@@ -22,13 +22,14 @@
     "homepage": "https://www.mediatis.de",
     "require": {
         "php": "^8.1",
-        "digital-marketing-framework/template-engine-twig": "@dev",
-        "digital-marketing-framework/typo3-core": "@dev",
+        "digital-marketing-framework/template-engine-twig": "dev-feature/MFR-136-t3-13",
+        "digital-marketing-framework/typo3-core": "dev-feature/MFR-136-t3-13",
         "typo3/cms-core": "^12.4 || ^13.4"
     },
     "require-dev": {
-        "mediatis/typo3-coding-standards": "^2.0"
+        "mediatis/typo3-coding-standards": "^2.1 || ^3.1"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "DigitalMarketingFramework\\Typo3\\TemplateEngineTwig\\": "Classes"
@@ -59,8 +60,17 @@
         "post-autoload-dump": [
             "@link-extension"
         ],
+        "link-extension": [
+            "@php -r 'is_dir($extFolder=__DIR__.\"/.Build/Web/typo3conf/ext/\") || mkdir($extFolder, 0777, true);'",
+            "@php -r 'file_exists($extFolder=__DIR__.\"/.Build/Web/typo3conf/ext/dmf_template_engine_twig\") || symlink(__DIR__,$extFolder);'"
+        ],
         "ci": [
-            "@ci:static"
+            "@ci:static",
+            "@ci:dynamic"
+        ],
+        "ci:composer": [
+            "@ci:composer:normalize",
+            "@ci:composer:psr-verify"
         ],
         "ci:composer:normalize": "@composer normalize --no-check-lock --dry-run",
         "ci:composer:psr-verify": "@composer dumpautoload --optimize --strict-psr",
@@ -69,8 +79,9 @@
             "@ci:coverage:functional"
         ],
         "ci:coverage:functional": [
+            "@ci:tests:create-directories",
             "@coverage:create-directories",
-            ".Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTests.xml --whitelist Classes --coverage-php=.Build/coverage/functional.cov Tests/Functional"
+            ".Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTests.xml --include-path Classes --coverage-php=.Build/coverage/functional.cov Tests/Functional"
         ],
         "ci:coverage:merge": [
             "@coverage:create-directories",
@@ -78,10 +89,13 @@
         ],
         "ci:coverage:unit": [
             "@coverage:create-directories",
-            ".Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTests.xml --whitelist Classes --coverage-php=.Build/coverage/unit.cov Tests/Unit"
+            ".Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTests.xml --include-path Classes --coverage-php=.Build/coverage/unit.cov Tests/Unit"
         ],
         "ci:dynamic": [
             "@ci:tests"
+        ],
+        "ci:json": [
+            "@ci:json:lint"
         ],
         "ci:json:lint": "find . ! -path '*.Build/*' ! -path '*node_modules/*' -name '*.json' | xargs -r php .Build/bin/jsonlint -q",
         "ci:php": [
@@ -95,20 +109,33 @@
         "ci:php:rector": "rector --dry-run",
         "ci:php:stan": "php -d memory_limit=228M ./.Build/bin/phpstan --no-progress",
         "ci:static": [
-            "@ci:composer:normalize",
-            "@ci:json:lint",
-            "@ci:php:cs-fixer",
-            "@ci:php:lint",
-            "@ci:php:stan",
-            "@ci:yaml:lint"
+            "@ci:composer",
+            "@ci:json",
+            "@ci:php",
+            "@ci:yaml"
         ],
         "ci:tests": [
             "@ci:tests:unit",
             "@ci:tests:functional"
         ],
-        "ci:tests:functional": "find 'Tests/Functional' -wholename '*Test.php' | echo \"Running functional test suite {}\"; .Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTests.xml;",
+        "ci:tests:create-directories": "mkdir -p .Build/public/typo3temp/var/tests",
+        "ci:tests:functional": [
+            "@ci:tests:create-directories",
+            "find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo \\\"Running functional test suite {}\\\"; .Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTests.xml {}';"
+        ],
         "ci:tests:unit": ".Build/bin/phpunit -c .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTests.xml Tests/Unit",
+        "ci:yaml": [
+            "@ci:yaml:lint"
+        ],
         "ci:yaml:lint": "find . ! -path '*.Build/*' ! -path '*node_modules/*' -regextype egrep -regex '.*.ya?ml$' | xargs -r php ./.Build/bin/yaml-lint",
+        "coding-standards:reset": [
+            "./.Build/bin/mediatis-typo3-coding-standards-setup reset",
+            "@fix:composer"
+        ],
+        "coding-standards:update": [
+            "./.Build/bin/mediatis-typo3-coding-standards-setup",
+            "@fix:composer"
+        ],
         "coverage:create-directories": "mkdir -p .Build/logs .Build/coverage",
         "docs:generate": [
             "@docs:generate:pullimage",
@@ -118,6 +145,13 @@
             "docker pull ghcr.io/t3docs/render-documentation",
             "docker tag ghcr.io/t3docs/render-documentation t3docs/render-documentation"
         ],
+        "fix": [
+            "@fix:composer",
+            "@fix:php"
+        ],
+        "fix:composer": [
+            "@fix:composer:normalize"
+        ],
         "fix:composer:normalize": "@composer normalize --no-check-lock",
         "fix:php": [
             "@fix:php:rector",
@@ -125,10 +159,6 @@
         ],
         "fix:php:cs": "php-cs-fixer fix --config .php-cs-fixer.php",
         "fix:php:rector": "rector",
-        "link-extension": [
-            "@php -r 'is_dir($extFolder=__DIR__.\"/.Build/Web/typo3conf/ext/\") || mkdir($extFolder, 0777, true);'",
-            "@php -r 'file_exists($extFolder=__DIR__.\"/.Build/Web/typo3conf/ext/dmf_template_engine_twig\") || symlink(__DIR__,$extFolder);'"
-        ],
         "phpstan:baseline": ".Build/bin/phpstan  --generate-baseline=.phpstan/phpstan-baseline.neon",
         "prepare-release": [
             "rm .gitignore",
@@ -155,12 +185,14 @@
     },
     "scripts-descriptions": {
         "ci": "Runs all dynamic and static code checks.",
+        "ci:composer": "Runs all composer checks.",
         "ci:composer:normalize": "Checks the composer.json.",
         "ci:composer:psr-verify": "Verifies PSR-4 namespace correctness.",
         "ci:coverage:functional": "Generates the code coverage report for functional tests.",
         "ci:coverage:merge": "Merges the code coverage reports for unit and functional tests.",
         "ci:coverage:unit": "Generates the code coverage report for unit tests.",
         "ci:dynamic": "Runs all PHPUnit tests (unit and functional).",
+        "ci:json": "Runs all JSON checks.",
         "ci:json:lint": "Lints the JSON files.",
         "ci:php": "Runs all static checks for the PHP files.",
         "ci:php:cs-fixer": "Checks the code style with the PHP Coding Standards Fixer (PHP-CS-Fixer).",
@@ -171,12 +203,16 @@
         "ci:tests": "Runs all PHPUnit tests (unit and functional).",
         "ci:tests:functional": "Runs the functional tests.",
         "ci:tests:unit": "Runs the unit tests.",
+        "ci:yaml": "Runs all YAML checks.",
         "ci:yaml:lint": "Lints the YAML files.",
         "coverage:create-directories": "Creates the directories needed for recording and merging the code coverage reports.",
         "docs:generate": "Renders the extension ReST documentation.",
+        "fix": "Runs all fixers.",
+        "fix:composer": "Runs all composer fixers.",
         "fix:composer:normalize": "Normalizes composer.json file content.",
         "fix:php": "Runs all fixers for the PHP code.",
         "fix:php:cs": "Fixes the code style with PHP-CS-Fixer.",
+        "fix:php:rector": "Fixes the code style with TYPO3 rector.",
         "phpstan:baseline": "Updates the PHPStan baseline file to match the code.",
         "prepare-release": "Removes development-only files in preparation of a TER release."
     }
