--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "homepage": "https://www.mediatis.de",
     "require": {
         "php": "^8.2",
-        "digital-marketing-framework/template-engine-twig": "dev-feature/MFR-136-t3-13",
-        "digital-marketing-framework/typo3-core": "dev-feature/MFR-136-t3-13",
+        "digital-marketing-framework/template-engine-twig": "^3.0",
+        "digital-marketing-framework/typo3-core": "^3.0",
         "typo3/cms-core": "^12.4 || ^13.4"
     },
     "require-dev": {
